fix: fix block fold button on mobile

--- a/src/_blocks.scss
+++ b/src/_blocks.scss
@@ -84,9 +84,13 @@ a:hover > .bullet-container .bullet {
   margin-left: 0 !important;
 }
 
-.ls-block div.items-center {
-  position: relative;
-  height: 26px !important;
+// .ls-block div.items-center {
+//   position: relative;
+//   height: 26px !important;
+// }
+.ls-block div.block-control-wrap {
+    position: relative;
+    height: 26px !important;
 }
 
 // hovering block indicator
